Teacher will be able to login and be auto assigned an Auth token

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 header{
-  background-color: bisque;
+  background-color: rgb(250, 238, 223);
   display: flex;
   justify-content: space-between;
   height: 100px;
