--- a/src/Routes/StudentLoginRoute/StudentLoginRoute.css
+++ b/src/Routes/StudentLoginRoute/StudentLoginRoute.css
@@ -1,23 +1,35 @@
 .student-login{
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
+  margin: auto;
   justify-content: center;
 }
 
 .student-login-form {
-  padding: 5%;
-  background-color: rgb(214, 204, 204);
+  padding: 3%;
   border-radius: 7%;
   border: rgb(117, 115, 115) 3px solid;
-  margin: 5% 40%;
-  min-height: 20vh;
-  
+  margin: 40px auto 0px;
+  width: 200px;
 }
 
-.student-username{
+input{
   border-radius: 2%;
   padding: 2% 0%;
-  width: 80%;
+  width: 100%;
+  height: 20px;
   margin: 8% 0%;
+}
+
+button{
+  display: flex;
+  margin: auto;
+  padding: 10px;
+}
+
+.student-help{
+  display: flex;
+  text-align: center;
+  margin: 10px;
+  font-size: 12px;
 }
