Basic CSS for header and landing page complete

--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -1,3 +1,43 @@
 .landing-page{
   padding: 20px;
 }
+
+.landing-page h2{
+  font-family: 'Lexend Deca', sans-serif;
+  font-size: 30px;
+}
+
+.landing-page p{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 18px;
+}
+
+.landing-page .teacher, .landing-page .student {
+  text-decoration: none;
+  font-family: 'Lexend Deca', sans-serif;
+  font-size: 30px;
+  padding: 30px;
+  border-radius: 15px;
+  color: white;
+  margin-top: 10px;
+  width: 250px;
+}
+
+.landing-page-link-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+}
+
+.landing-page .student {
+  background: #0ABAD4;
+}
+
+.landing-page .teacher {
+  background: #8B00B5;
+}
+
+.landing-page .student:hover, .landing-page .teacher:hover {
+  background: black;
+}
