--- a/src/components/StudentList/StudentList.css
+++ b/src/components/StudentList/StudentList.css
@@ -1,3 +1,12 @@
 .StudentList-container ul{
   list-style-type: none;
 }
+
+.StudentList-container h2{
+  text-align: center;
+}
+
+.StudentList-container{
+  display: flex; 
+  flex-direction: column;
+}
