--- a/src/Routes/StudentDashboard/StudentDashboard.css
+++ b/src/Routes/StudentDashboard/StudentDashboard.css
@@ -1,46 +1,12 @@
-.student-dashboard-section li{
-  list-style: none;
-}
-
-.student-dashboard-section ul{
-  padding-left: 0;
-}
-
 .student-dashboard-section{
   display: flex; 
   flex-direction: column;
   text-align: center;
   padding: 15px;
-  font-family: 'Lexend Deca', sans-serif;
+  font-family: var(--heading-font);
 } 
 
-.student-dashboard-section p {
-  margin: 0;
-  font-size: 20px;
-}
-
-.student-dashboard-section .hidden {
-  display: none;
-}
-
-.student-dashboard-section button {
-  color: white;
-  background: #0ABAD4;
-  margin: 10px auto;
-  padding: 5px 15px 8px 15px;
-  border-radius: 15px;
-  font-size: 16px;
-  text-align: center;
-  font-family: 'Lexend Deca', sans-serif;
-}
-
-.student-dashboard-section button:hover {
-  background: black;
-  cursor: pointer;
-}
-
 .student-dashboard-section .goals-container {
-/* border: solid 1px darkgray; */
 margin-bottom: 20px;
 }
 
