--- a/src/Routes/NotFoundRoute/NotFoundRoute.css
+++ b/src/Routes/NotFoundRoute/NotFoundRoute.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-family: 'Lexend Deca', sans-serif;
+  font-family: var(--heading-font);
   font-size: 30px;
   color: rgb(241, 46, 79);
   margin-right: 20px;
