--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -1,4 +1,4 @@
-.landing-page{
+.landing-page {
   display: flex; 
   margin: auto;
   flex-direction: column;
@@ -6,19 +6,9 @@
   padding: 20px;
 }
 
-.landing-page h2{
-  font-family: 'Lexend Deca', sans-serif;
-  font-size: 30px;
-}
-
-.landing-page p{
-  font-family: 'Montserrat', sans-serif;
-  font-size: 18px;
-}
-
 .landing-page .teacher, .landing-page .student {
   text-decoration: none;
-  font-family: 'Lexend Deca', sans-serif;
+  font-family: var(--heading-font);
   font-size: 30px;
   padding: 30px;
   border-radius: 15px;
@@ -35,13 +25,13 @@
 }
 
 .landing-page .student {
-  background: #0ABAD4;
+  background: var(--blue);
   width: 80%;
   max-width: 300px;
 }
 
 .landing-page .teacher {
-  background: #8B00B5;
+  background: var(--purple);
   width: 80%;
   max-width: 300px;
 }
