--- a/src/components/LearningTargetForm/LearningTargetForm.css
+++ b/src/components/LearningTargetForm/LearningTargetForm.css
@@ -9,32 +9,12 @@
   align-items: center;
  }
 
- .learning-target-form label {
-   font-size: 25px;
-   font-weight: 800;
- }
-
  .learning-target-form textarea {
   border-radius: 5px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: var(--body-font);
   font-size: 15px;
   width: 300px;
   height: 50px;
   border: solid 1px darkgray;
   margin: 10px;
- }
-
- .learning-target-form button {
-  color: white;
-  background: #81D40A;
-  padding: 5px 15px 8px 15px;
-  border-radius: 15px;
-  font-size: 16px;
-  text-align: center;
-  font-family: 'Lexend Deca', sans-serif;
- }
-
- .learning-target-form button:hover {
-  background: black;
-  cursor: pointer;
  }
