--- a/src/components/RegistrationForm/RegistrationForm.css
+++ b/src/components/RegistrationForm/RegistrationForm.css
@@ -1,56 +1,9 @@
-.registration-form {
-  display: flex; 
-  flex-direction: column;
-  padding: 15px;
-  border-radius: 15px;
-  border: solid 1px darkgray;
-  margin: 40px auto;
-  width: 80%;
-  max-width: 300px;
-  align-items: center;
-  font-family: 'Lexend Deca', sans-serif;
-}
 
-.registration-form h2{
-  font-size: 27px;
-}
-
-.registration-form label {
-  font-size: 20px;
-}
-
-.registration-form input {
-  border-radius: 5px;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 15px;
-  border: solid 1px darkgray;
-  margin: 10px;
-}
-
-.registration-form button {
-  color: white;
-  background: #8B00B5;
-  padding: 5px 15px 8px 15px;
-  border-radius: 15px;
-  font-size: 16px;
-  text-align: center;
-  font-family: 'Lexend Deca', sans-serif;
-}
-
-.registration-form button:hover {
-  background: black;
-  cursor: pointer;
-}
 .registration-form .link-to-login {
   justify-content: center;
 }
 
-.registration-form .link-to-login a {
-  color: #0ABAD4;
+.login-link {
+  color: var(--blue);
   font-size: 15px;
-}
-
-.registration-form .link-to-login a:hover {
-  color: black;
-  cursor: pointer;
 }
