--- a/src/components/StudentList/StudentList.css
+++ b/src/components/StudentList/StudentList.css
@@ -17,3 +17,17 @@
   align-items: center;
 }
 
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 60%;
+  margin-left:auto; 
+  margin-right:auto;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
