--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -21,6 +21,17 @@ header h1 a:hover {
   flex-direction: row;
 }
 
+.logout-buttons {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.logout-buttons .button {
+  margin: 5px;
+}
+
 /* MEDIA QUERIES */
 
 @media only screen and (min-width: 600px) {
@@ -30,5 +41,9 @@ header h1 a:hover {
 
   .login-buttons{
     flex-direction: column;
+  }
+
+  .logout-buttons{
+    flex-direction: column
   }
 }
