--- a/src/Routes/StudentDashboard/StudentDashboard.css
+++ b/src/Routes/StudentDashboard/StudentDashboard.css
@@ -23,3 +23,10 @@ margin-bottom: 20px;
   max-width: 300px;
   margin: 10px auto;
 }
+
+.student-goal {
+  background-image: url();
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 500px;
+}
