--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   --purple: #8B00B5;
   --blue: #0ABAD4;
   --green: #81D40A;
+  --red: rgb(241, 46, 79);
 }
 
 /* BUTTONS NEED TWO CLASSES, MAIN BUTTON CLASS AND COLOR */
@@ -34,10 +35,13 @@
 .blue-button {
   background:var(--blue);
 }
+.red-button {
+  background:var(--red);
+}
 
 /* FOR ERROR DIVS */
 .alert {
-  color: red;
+  color: var(--red);
   font-family: var(--body-font);
   font-size: 12px;
 }
