--- a/src/Routes/DataDisplayRoute/DataDisplay.css
+++ b/src/Routes/DataDisplayRoute/DataDisplay.css
@@ -17,8 +17,6 @@
   border-bottom: 1px solid lightGrey;
   padding: 1%;
   text-align: left;
-
-
 }
 
 .exit-ticket-data-container {
@@ -34,6 +32,11 @@
 
 .incorrect-option {
   color: red;
+}
+.goal-data > tbody > tr > td   {
+  /* border: 1px solid lightgray;
+  border-radius: 5px; */
+  padding: .3% 1%;
 }
 
 .data-table {
