minor styling to teacher dashboard

--- a/src/Routes/TeacherDashboardRoute/TeacherDashboardRoute.css
+++ b/src/Routes/TeacherDashboardRoute/TeacherDashboardRoute.css
@@ -1,13 +1,21 @@
  .TeacherDashboardRoute-section {
-   margin-top: 40px;
    font-family: var(--heading-font);
  }
 
  .TeacherDashboardRoute-learning-target-submit {
   border-bottom: solid 1px darkgray;
+  padding-bottom: 20px;
  }
 
  .TeacherDashboardRoute-section .data {
-   background: lightgray;
+   background: var(--gray);
+   padding-top: 30px;
+   padding-bottom: 30px;
+ }
+
+ @media only screen and (min-width: 800px) {
+.TeacherDashboardRoute-section {
+  
+}
  }
  
