brought back all radios working on priority

--- a/src/Routes/SessionRoute/SessionRoute.css
+++ b/src/Routes/SessionRoute/SessionRoute.css
@@ -54,7 +54,7 @@
   margin: 5px 20px;
 }
 
-input[type="radio"]{
+.SessionRoute-container input[type="radio"]{
   margin: 0px 5px;
   display: none;
 }
