timer button bug fix

--- a/src/Routes/StudentDashboard/StudentDashboard.css
+++ b/src/Routes/StudentDashboard/StudentDashboard.css
@@ -45,6 +45,10 @@ margin-bottom: 20px;
   margin: 50px auto;
 }
 
-.student-subgoal {
+.student-dashboard-section .student-subgoal {
   background-image: url('../../Images/SalmonGridPaper.svg');
+}
+
+.student-dashboard-section .button > *{
+  pointer-events: none;
 }
