Implement modal for exit ticket creation - teacher dashboard, other small css tweaks

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
   --green: #81D40A;
   --red: rgb(241, 46, 79);
   --gray: rgb(226, 226, 226);
+  --darkgray: rgb(81, 81, 81);
 }
 
 /* BUTTONS NEED TWO CLASSES, MAIN BUTTON CLASS AND COLOR */
@@ -74,13 +75,13 @@ button:focus {
 
 /* Design Standards (styles automatically apply) */
 .button:hover {
-  background: black;
+  background: var(--darkgray);
   cursor: pointer;
   transform: translateY(-3px);
 }
 
 a:hover:not(.button) {
-  color: black;
+  color: var(--darkgray);
   cursor: pointer;
 }
 
