--- a/src/components/ExitTicketForm/ExitTicketForm.css
+++ b/src/components/ExitTicketForm/ExitTicketForm.css
@@ -2,9 +2,34 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -30%);
-  background-color: red;
+  transform: translate(-50%, -50%);
+  background-color: white;
   padding: 1rem 1.5rem;
   width: 24rem;
   border-radius: 15px;
+  border: 1px solid darkgray;
+}
+
+.modal-container {
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  left: 0;
+  background: rgba(255, 255, 255, 0.7);
+  overflow-y: scroll
+}
+
+.close {
+  border-radius: 3px;
+  float: right;
+  width: 15px;
+  color: var(--red);
+  font-weight: 800;
+  font-size: 20px;
+}
+
+.close:hover {
+  color: black;
+  cursor: pointer;
 }
