--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -34,7 +34,7 @@ header h1 a:hover {
 
 /* MEDIA QUERIES */
 
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width: 600px) {
   header {
     flex-direction: row;
   }
