update many of Wence's suggestions and some of the landing page

--- a/src/Routes/TeacherDashboardRoute/TeacherDashboardRoute.css
+++ b/src/Routes/TeacherDashboardRoute/TeacherDashboardRoute.css
@@ -1,5 +1,6 @@
  .TeacherDashboardRoute-section {
    font-family: var(--heading-font);
+   padding-bottom: 250px;
  }
 
  .TeacherDashboardRoute-learning-target-submit {
