--- a/src/Routes/SessionRoute/SessionRoute.css
+++ b/src/Routes/SessionRoute/SessionRoute.css
@@ -68,6 +68,7 @@
   border: solid 1px darkgray;
   border-radius: 10px;
   padding: 3px 8px;
+  padding-bottom: 20px;
   margin-bottom: 30px;
 }
 
@@ -95,6 +96,16 @@
 .update{
   margin-top: 20px;
 }
+
+.priority-container {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  padding-left: 25%;
+}
+
+
+
 
 
 /* MEDIA QUERIES */
