--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -51,8 +51,7 @@
 }
 
 .landing-page img {
-  border: 3px solid var(--purple);
-  border-radius: 15px;
+  
   margin: 10px auto;
 }
 
@@ -73,6 +72,10 @@
   background-size: cover;
 }
 
+.placeholder {
+  border: 3px solid var(--purple);
+  border-radius: 15px;
+}
 @media only screen and (min-width: 600px) {
   .info {
     display: flex;
