--- a/src/Routes/DataDisplayRoute/DataDisplayO.css
+++ b/src/Routes/DataDisplayRoute/DataDisplayO.css
@@ -3,6 +3,7 @@
   display: flex;  
   justify-content: center;
   margin-top: 3%;
+  
 }
 
 .contain-student-res {
@@ -38,7 +39,20 @@
   justify-content: center;
 
 }
-
+/* Zebra striping */
+tr:nth-of-type(odd) { 
+  background: #eee; 
+}
+th { 
+  background: #333; 
+  color: white; 
+  font-weight: bold; 
+}
+td, th { 
+  padding: 9px; 
+  border: 1px solid #ccc; 
+  text-align: left; 
+}
 /* .option-title {
   border-bottom: 1px solid gray;
 } */
@@ -68,6 +82,7 @@
   border-radius: 15px;
   padding: 1%;
   box-shadow: 3px 3px 10px 3px rgb(168, 164, 164);
+
 }
 
 .goal-data{
@@ -117,73 +132,13 @@
 .data-table > thead > tr > th:last-child  {
   border-right: none;
 }
-.data-table { 
-  width: 100%; 
-  border-collapse: collapse; 
-}
-/* Zebra striping */
-tr:nth-of-type(odd) { 
-  background: #eee; 
-}
-th { 
-  background: #333; 
-  color: white; 
-  font-weight: bold; 
-}
-td, th { 
-  padding: 6px; 
-  border: 1px solid #ccc; 
-  text-align: left; 
-}
-@media only screen and (max-width: 160px),(min-device-width: 768px) and (max-device-width: 1024px) {
-  /* .contain-student-res {
+
+@media only screen and (max-width: 600px) {
+   .contain-student-res {
     width: 70%;
     display: flex;
     flex-direction: column;
     margin: 0 auto;
     align-items: flex-start;
-  } */
-  .data-table, thead, tbody, th, td, tr{
-    display: block;
-  }
-  thead tr { 
-		position: absolute;
-		top: -9999px;
-		left: -9999px;
-	}
-	
-	tr { border: 1px solid #ccc; }
-	
-	td { 
-		/* Behave  like a "row" */
-		border: none;
-		border-bottom: 1px solid #eee; 
-		position: relative;
-		padding-left: 50%; 
-	}
-	
-	td:before { 
-		/* Now like a table header */
-		position: absolute;
-		/* Top/left values mimic padding */
-		top: 6px;
-		left: 6px;
-		width: 45%; 
-		padding-right: 10px; 
-		white-space: nowrap;
-	}
-	
-	/*
-	Label the data
-	*/
-	td:nth-of-type(1):before { content: "First Name"; }
-	td:nth-of-type(2):before { content: "Last Name"; }
-	td:nth-of-type(3):before { content: "Job Title"; }
-	td:nth-of-type(4):before { content: "Favorite Color"; }
-	td:nth-of-type(5):before { content: "Wars of Trek?"; }
-	td:nth-of-type(6):before { content: "Secret Alias"; }
-	td:nth-of-type(7):before { content: "Date of Birth"; }
-	td:nth-of-type(8):before { content: "Dream Vacation City"; }
-	td:nth-of-type(9):before { content: "GPA"; }
-	td:nth-of-type(10):before { content: "Arbitrary Data"; }
+  } 
 }
