--- a/src/Routes/SessionRoute/SessionRoute.css
+++ b/src/Routes/SessionRoute/SessionRoute.css
@@ -8,30 +8,12 @@
   margin-bottom: 20px;
 }
 
-.high {
-  background: var(--purple);
-}
-
-.medium {
-  background: var(--blue);
-}
-
-.low {
-  background: var(--green);
+.expired {
+  background: rgb(243, 243, 243);
 }
 
 .priority-button:hover{
   color: var(--purple);
-  cursor: pointer;
-}
-
-.student-list .expired button {
-  background: white;
-  color: black;
-}
-
-.student-list .expired button:hover {
-  background: lightgray;
   cursor: pointer;
 }
 
@@ -54,11 +36,6 @@
   margin: 5px 20px;
 }
 
-/* .SessionRoute-container input[type="radio"]{
-  margin: 0px 5px;
-  display: none;
-} */
-
 .radio-label{
   padding: 5px;
 }
@@ -70,12 +47,13 @@
   padding: 3px 8px;
   padding-bottom: 20px;
   margin-bottom: 30px;
-  position: relative;
+  /* position: relative; */
 }
 
+/* priority flags */
 .SessionRoute-container li img {
   position:absolute;
-  bottom:90px;
+  top: 0px;
   left:200px;
 }
 
@@ -111,9 +89,13 @@
   padding-left: 25%;
 }
 
+.student-goal-learning-target {
+  margin-top: 50px;
+}
 
-
-
+.flag-container {
+  position: relative;
+}
 
 /* MEDIA QUERIES */
 
@@ -128,8 +110,8 @@
 
   .student-list li {
     width: 300px;
-    margin-left: 15px;
-    margin-right: 15px;
+    margin-left: 20px;
+    margin-right: 20px;
     min-height: 200px;
   }
 }
